# sj

./: CMakeLists.txt  README.md
include/sj/: background_thread.h  job.h  job_interface.h  scheduler.h  task.h
include/sj/detail/: future.h
qt-integration/: CMakeLists.txt
qt-integration/include/sj/qt/: progress.h  qscheduler.h
qt-integration/src/: progress.cpp  qscheduler.cpp
src/: background_thread.cpp  job.cpp  scheduler.cpp
